Add missing resources.
