# src/apis/default_api.rs
@@ -3,7 +3,7 @@
  *
  * API for querying recent vulnerabilities from the ENISA EUVD database.
  *
- * The version of the OpenAPI document: 0.0.1
+ * The version of the OpenAPI document: 0.1.0
  * 
  * Generated by: https://openapi-generator.tech
  */
@@ -65,7 +65,7 @@ pub enum QueryVulnerabilitiesError {
 }
 
 
-pub async fn get_advisory_by_id(configuration: &configuration::Configuration, id: &str) -> Result<(), Error<GetAdvisoryByIdError>> {
+pub async fn get_advisory_by_id(configuration: &configuration::Configuration, id: &str) -> Result<models::Advisory, Error<GetAdvisoryByIdError>> {
     // add a prefix to parameters to efficiently prevent name collisions
     let p_id = id;
 
@@ -81,9 +81,20 @@ pub async fn get_advisory_by_id(configuration: &configuration::Configuration, id
     let resp = configuration.client.execute(req).await?;
 
     let status = resp.status();
+    let content_type = resp
+        .headers()
+        .get("content-type")
+        .and_then(|v| v.to_str().ok())
+        .unwrap_or("application/octet-stream");
+    let content_type = super::ContentType::from(content_type);
 
     if !status.is_client_error() && !status.is_server_error() {
-        Ok(())
+        let content = resp.text().await?;
+        match content_type {
+            ContentType::Json => serde_json::from_str(&content).map_err(Error::from),
+            ContentType::Text => serde_json::from_str(&content).map_err(Error::from),
+            ContentType::Unsupported(unknown_type) => return Err(Error::from(serde_json::Error::custom(format!("Received `{unknown_type}` content type response that cannot be converted to `models::Advisory`")))),
+        }
     } else {
         let content = resp.text().await?;
         let entity: Option<GetAdvisoryByIdError> = serde_json::from_str(&content).ok();
@@ -91,7 +102,7 @@ pub async fn get_advisory_by_id(configuration: &configuration::Configuration, id
     }
 }
 
-pub async fn get_by_enisa_id(configuration: &configuration::Configuration, id: &str) -> Result<(), Error<GetByEnisaIdError>> {
+pub async fn get_by_enisa_id(configuration: &configuration::Configuration, id: &str) -> Result<models::VulnerabilityWithRelations, Error<GetByEnisaIdError>> {
     // add a prefix to parameters to efficiently prevent name collisions
     let p_id = id;
 
@@ -107,9 +118,20 @@ pub async fn get_by_enisa_id(configuration: &configuration::Configuration, id: &
     let resp = configuration.client.execute(req).await?;
 
     let status = resp.status();
+    let content_type = resp
+        .headers()
+        .get("content-type")
+        .and_then(|v| v.to_str().ok())
+        .unwrap_or("application/octet-stream");
+    let content_type = super::ContentType::from(content_type);
 
     if !status.is_client_error() && !status.is_server_error() {
-        Ok(())
+        let content = resp.text().await?;
+        match content_type {
+            ContentType::Json => serde_json::from_str(&content).map_err(Error::from),
+            ContentType::Text => serde_json::from_str(&content).map_err(Error::from),
+            ContentType::Unsupported(unknown_type) => return Err(Error::from(serde_json::Error::custom(format!("Received `{unknown_type}` content type response that cannot be converted to `models::VulnerabilityWithRelations`")))),
+        }
     } else {
         let content = resp.text().await?;
         let entity: Option<GetByEnisaIdError> = serde_json::from_str(&content).ok();
@@ -219,7 +241,7 @@ pub async fn get_last_vulnerabilities(configuration: &configuration::Configurati
     }
 }
 
-pub async fn get_vulnerability_by_id(configuration: &configuration::Configuration, id: &str) -> Result<(), Error<GetVulnerabilityByIdError>> {
+pub async fn get_vulnerability_by_id(configuration: &configuration::Configuration, id: &str) -> Result<models::VulnerabilityWithComponents, Error<GetVulnerabilityByIdError>> {
     // add a prefix to parameters to efficiently prevent name collisions
     let p_id = id;
 
@@ -235,9 +257,20 @@ pub async fn get_vulnerability_by_id(configuration: &configuration::Configuratio
     let resp = configuration.client.execute(req).await?;
 
     let status = resp.status();
+    let content_type = resp
+        .headers()
+        .get("content-type")
+        .and_then(|v| v.to_str().ok())
+        .unwrap_or("application/octet-stream");
+    let content_type = super::ContentType::from(content_type);
 
     if !status.is_client_error() && !status.is_server_error() {
-        Ok(())
+        let content = resp.text().await?;
+        match content_type {
+            ContentType::Json => serde_json::from_str(&content).map_err(Error::from),
+            ContentType::Text => serde_json::from_str(&content).map_err(Error::from),
+            ContentType::Unsupported(unknown_type) => return Err(Error::from(serde_json::Error::custom(format!("Received `{unknown_type}` content type response that cannot be converted to `models::VulnerabilityWithComponents`")))),
+        }
     } else {
         let content = resp.text().await?;
         let entity: Option<GetVulnerabilityByIdError> = serde_json::from_str(&content).ok();
