# src/models/mod.rs
@@ -1,3 +1,25 @@
+pub mod advisory;
+pub use self::advisory::Advisory;
+pub mod advisory_advisory_product_inner;
+pub use self::advisory_advisory_product_inner::AdvisoryAdvisoryProductInner;
+pub mod advisory_enisa_id_advisories_inner;
+pub use self::advisory_enisa_id_advisories_inner::AdvisoryEnisaIdAdvisoriesInner;
+pub mod advisory_source;
+pub use self::advisory_source::AdvisorySource;
+pub mod advisory_vulnerability_advisory_inner;
+pub use self::advisory_vulnerability_advisory_inner::AdvisoryVulnerabilityAdvisoryInner;
+pub mod enisa_id_vulnerability_entry;
+pub use self::enisa_id_vulnerability_entry::EnisaIdVulnerabilityEntry;
+pub mod nested_product;
+pub use self::nested_product::NestedProduct;
+pub mod nested_vendor;
+pub use self::nested_vendor::NestedVendor;
+pub mod nested_vulnerability;
+pub use self::nested_vulnerability::NestedVulnerability;
+pub mod nested_vulnerability_vulnerability_product_inner;
+pub use self::nested_vulnerability_vulnerability_product_inner::NestedVulnerabilityVulnerabilityProductInner;
+pub mod nested_vulnerability_vulnerability_vendor_inner;
+pub use self::nested_vulnerability_vulnerability_vendor_inner::NestedVulnerabilityVulnerabilityVendorInner;
 pub mod vulnerabilities;
 pub use self::vulnerabilities::Vulnerabilities;
 pub mod vulnerability;
@@ -8,3 +30,7 @@ pub mod vulnerability_enisa_id_product_inner_product;
 pub use self::vulnerability_enisa_id_product_inner_product::VulnerabilityEnisaIdProductInnerProduct;
 pub mod vulnerability_enisa_id_vendor_inner;
 pub use self::vulnerability_enisa_id_vendor_inner::VulnerabilityEnisaIdVendorInner;
+pub mod vulnerability_with_components;
+pub use self::vulnerability_with_components::VulnerabilityWithComponents;
+pub mod vulnerability_with_relations;
+pub use self::vulnerability_with_relations::VulnerabilityWithRelations;
