# src/models/nested_product.rs
@@ -12,14 +12,14 @@ use crate::models;
 use serde::{Deserialize, Serialize};
 
 #[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
-pub struct VulnerabilityEnisaIdProductInnerProduct {
+pub struct NestedProduct {
     #[serde(rename = "name", skip_serializing_if = "Option::is_none")]
     pub name: Option<String>,
 }
 
-impl VulnerabilityEnisaIdProductInnerProduct {
-    pub fn new() -> VulnerabilityEnisaIdProductInnerProduct {
-        VulnerabilityEnisaIdProductInnerProduct {
+impl NestedProduct {
+    pub fn new() -> NestedProduct {
+        NestedProduct {
             name: None,
         }
     }
